Fixed med icon not showing problem

--- a/public/main.less
+++ b/public/main.less
@@ -445,7 +445,7 @@
 .medicationListContainer{
 	margin: 0 20%;
 	& .image{
-			background-image: url(Assets/MedIconMedView.png);
+			background-image: url(Assets/medIconMedView.png);
 		}
 }
 /*allergies view*/
